--- a/for u/index.html
+++ b/for u/index.html
@@ -1,8 +1,4 @@
-<!--=========================-!>
-Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (DM IG untuk order)
-+ Youtube: Deka Tutorial
-+ Tiktok: @deka_tutorial
-+ Instagram: deka_tutorial
+
 <-===========================-->
 <!DOCTYPE html>
 <html lang="en">
@@ -19,9 +15,18 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
-      nomorWhatsapp = ``;
+      ucapan = `Hai Sayangku😋
+      Selamat Ulang Tahun Ganteng "Gilang Putra Purnama"💗🎉
+      Sehat Selalu Ya Cinta
+      Semoga Bisa Jadi Orang Yang Sukses
+      Nurut terus sama ortu
+      Semoga Apa Yang Kamu Inginkan Bisa Tercapai
+      Semoga Bisa Sayang Terus Sama Aku
+      Doanya Yang Terbaik Deh Buat Kamu
+      Maaf Aku Cuma Bisa Ngasih Ini
+      Lovee Youu Cintaku Gantengku Manusia Favoritku🫶🏻`;
+      musik = `musik.mp3`;
+      nomorWhatsapp = `622314766503`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
