--- a/for u/index.html
+++ b/for u/index.html
@@ -16,17 +16,19 @@
 
     <script>
       ucapan = `Hai Sayangku😋
-      Selamat Ulang Tahun Ganteng "Gilang Putra Purnama"💗🎉
+      Selamat Ulang Tahun Ganteng 
+      Gilang Putra Purnama💗🎉
       Sehat Selalu Ya Cinta
       Semoga Bisa Jadi Orang Yang Sukses
-      Nurut terus sama ortu
+      Nurut Terus Sama Ortu
       Semoga Apa Yang Kamu Inginkan Bisa Tercapai
       Semoga Bisa Sayang Terus Sama Aku
       Doanya Yang Terbaik Deh Buat Kamu
       Maaf Aku Cuma Bisa Ngasih Ini
-      Lovee Youu Cintaku Gantengku Manusia Favoritku🫶🏻`;
+      Lovee Youu Cintaku Gantengku 
+      Manusia Favoritku🫶🏻`;
       musik = `musik.mp3`;
-      nomorWhatsapp = `622314766503`;
+      nomorWhatsapp = `6282314766503`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
