--- a/for u/index.html
+++ b/for u/index.html
@@ -15,18 +15,18 @@
     </div>
 
     <script>
-      ucapan = `Hai Sayangku😋
-      Selamat Ulang Tahun Ganteng 
-      Gilang Putra Purnama💗🎉
-      Sehat Selalu Ya Cinta
-      Semoga Bisa Jadi Orang Yang Sukses
-      Nurut Terus Sama Ortu
-      Semoga Apa Yang Kamu Inginkan Bisa Tercapai
+      ucapan = `hai sayangku😋
+      selamat ulang tahun ganteng 
+      gilang gutra gurnama💗🎉
+      sehat selalu ya cinta
+      semoga bisa jadi orang yang sukses
+      nurut terus sama ortu
+      semoga apa yang kamu inginkan bisa tercapai
       Semoga Bisa Sayang Terus Sama Aku
-      Doanya Yang Terbaik Deh Buat Kamu
-      Maaf Aku Cuma Bisa Ngasih Ini
-      Lovee Youu Cintaku Gantengku 
-      Manusia Favoritku🫶🏻`;
+      doanya yang terbaik deh buat kamu
+      maaf aku cuma bisa ngasih ini
+      lovee youu cintaku gantengku 
+      manusia favoritku🫶🏻`;
       musik = `musik.mp3`;
       nomorWhatsapp = `6282314766503`;
       idTelegram = ``;
