--- a/for u/index.html
+++ b/for u/index.html
@@ -1,4 +1,3 @@
-
 <-===========================-->
 <!DOCTYPE html>
 <html lang="en">
@@ -15,17 +14,17 @@
     </div>
 
     <script>
-      ucapan = `hai sayangku😋
-      selamat ulang tahun ganteng 
-      gilang gutra gurnama💗🎉
-      sehat selalu ya cinta
-      semoga bisa jadi orang yang sukses
-      nurut terus sama ortu
-      semoga apa yang kamu inginkan bisa tercapai
-      Semoga Bisa Sayang Terus Sama Aku
-      doanya yang terbaik deh buat kamu
-      maaf aku cuma bisa ngasih ini
-      lovee youu cintaku gantengku 
+      ucapan = `hai sayangku😋`;
+      selamat ulang tahun ganteng`; 
+      gilang gutra gurnama💗🎉`;
+      sehat selalu ya cinta`;
+      semoga bisa jadi orang yang sukses`;
+      nurut terus sama ortu`;
+      semoga apa yang kamu inginkan bisa tercapai`;
+      Semoga Bisa Sayang Terus Sama Aku`;
+      doanya yang terbaik deh buat kamu`;
+      maaf aku cuma bisa ngasih ini`;
+      lovee youu cintaku gantengku`; 
       manusia favoritku🫶🏻`;
       musik = `musik.mp3`;
       nomorWhatsapp = `6282314766503`;
