--- a/for u/index.html
+++ b/for u/index.html
@@ -16,12 +16,12 @@
     <script>
       ucapan = `hai sayangku😋`;
       selamat ulang tahun ganteng`; 
-      gilang gutra gurnama💗🎉`;
+      Gilang Putra Purnama💗🎉`;
       sehat selalu ya cinta`;
       semoga bisa jadi orang yang sukses`;
       nurut terus sama ortu`;
       semoga apa yang kamu inginkan bisa tercapai`;
-      Semoga Bisa Sayang Terus Sama Aku`;
+      semoga bisa sayang terus sama aku`;
       doanya yang terbaik deh buat kamu`;
       maaf aku cuma bisa ngasih ini`;
       lovee youu cintaku gantengku`; 
