--- a/for u/index.html
+++ b/for u/index.html
@@ -14,23 +14,22 @@
     </div>
 
     <script>
-      ucapan = `hai sayangku😋`;
-      selamat ulang tahun ganteng`; 
-      Gilang Putra Purnama💗🎉`;
-      sehat selalu ya cinta`;
-      semoga bisa jadi orang yang sukses`;
-      nurut terus sama ortu`;
-      semoga apa yang kamu inginkan bisa tercapai`;
-      semoga bisa sayang terus sama aku`;
-      doanya yang terbaik deh buat kamu`;
-      maaf aku cuma bisa ngasih ini`;
-      lovee youu cintaku gantengku`; 
+      ucapan = `Hai Sayangku😋
+      selamat ulang tahun gantegku Gilang Putra Purnama💗🎉
+      sehat selalu ya cintaku, dilancarkan selalu urusannya
+      semoga bisa jadi orang yang sukses
+      nurut terus sama ortu
+      semoga apa yang kamu inginkan bisa tercapai
+      semoga bisa sayang terus sama aku ehehe
+      doanya yang terbaik deh buat kamu
+      maaf aku cuma bisa ngasih ini mwhehe
+      lovee youu cintaku gantengku
       manusia favoritku🫶🏻`;
       musik = `musik.mp3`;
       nomorWhatsapp = `6282314766503`;
       idTelegram = ``;
 
-      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
+      Miaww(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
